kustomize/parladata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parladata-slovenija-staging-deployment
  labels:
    app: parladata-slovenija-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parladata-slovenija-staging
  template:
    metadata:
      labels:
        app: parladata-slovenija-staging
    spec:
      volumes:
        - name: parladata-shared-storage
          emptyDir: {}
      containers:
        - name: parladata-slovenija-staging
          image: parladata-slovenija-staging
          volumeMounts:
            - name: parladata-shared-storage
              mountPath: /pvc
          command:
            - gunicorn
            - parladata_project.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 300Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 400m
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"] # give load balancer time to stop sending traffic to this pod
          startupProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
            failureThreshold: 30 # 30x10 = 300s = 5min
        - name: parladata-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: parladata-shared-storage
              mountPath: /usr/share/nginx/html
