kustomize/parladata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parladata-slovenija-staging
spec:
  selector:
    app: parladata-slovenija-staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: parladata-slovenija-staging-nginx
spec:
  selector:
    app: parladata-slovenija-staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
