kustomize/parladata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parladata-slovenija
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      traefik-plugin-blockuseragent@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - data.parlameter.si
      secretName: parladata-slovenija-tls
  rules:
    - host: data.parlameter.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parladata-slovenija
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parladata-slovenija-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.data.parlameter.si
      secretName: parladata-slovenija-nginx-tls
  rules:
    - host: files.data.parlameter.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parladata-slovenija-nginx
                port:
                  number: 80
